# cpp-project-template

./: CMakeLists.txt  README.md
src/: foo.cxx  foo.hxx  main.cxx
test/: CMakeLists.txt  foo_test.cxx
